# ACIS

./: .env.example  .gitignore  ACIS_Requirements_Architecture_v2.md  README.md  docker-compose.yml  flow_diagram.md  mcp_serve.py  pyproject.toml  run.py
.claude/: CLAUDE.md
config/: channels.yaml  topics.yaml
data/: sample_channels.json
docs/: technical_reference.md
migrations/: 001_init.sql  002_topic_tf.sql  003_phase2.sql  004_phase3.sql  005_transcript_cache.sql  006_gap_detections.sql  007_beliefs.sql
skills/acis/: skill.md
src/acis/: __init__.py  config.py  db.py  hermes_bridge.py  memory.py  models.py  pipeline.py  report.py  runner.py  sample_data.py  tools.py
src/acis/agents/: __init__.py  agentscope.py  channel_researcher.py  gap_detector.py  hook_analyzer.py  performance_correlator.py  synthesizer.py  topic_extractor.py
src/acis/ingestion/: __init__.py  service.py  youtube.py
